--- a/index.html
+++ b/index.html
@@ -12,11 +12,87 @@
       navigator.serviceWorker.register('service-worker.js');
     }
   </script>
+  <style>
+    body, html {
+      margin: 0;
+      padding: 0;
+      height: 100%;
+      font-family: sans-serif;
+    }
+
+    header {
+      background-color: #1976d2;
+      color: white;
+      padding: 12px;
+      text-align: center;
+      font-size: 1.2em;
+      font-weight: bold;
+    }
+
+    #map {
+      height: calc(100vh - 108px); /* header (48px) + footer (60px) */
+      width: 100%;
+    }
+
+    footer {
+      height: 60px;
+      background-color: #f2f2f2;
+      display: flex;
+      justify-content: space-around;
+      align-items: center;
+      border-top: 1px solid #ccc;
+      position: fixed;
+      bottom: 0;
+      width: 100%;
+    }
+
+    footer .icon {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      font-size: 0.75em;
+      color: #444;
+    }
+
+    footer .icon svg {
+      width: 24px;
+      height: 24px;
+      margin-bottom: 4px;
+    }
+
+    footer .icon.active {
+      color: #1976d2; /* same as header color */
+      font-weight: bold;
+    }
+
+    a {
+      text-decoration: none;
+      color: inherit;
+    }
+  </style>
 </head>
 <body>
-  <div style="border-bottom: 3px solid #ccc; padding:10px; font-size: 1.2em;">OSCAR</div>
-  <div id="map" style="bottom:0;"></div>
-  <script src="leaflet/leaflet.js"></script>
-  <script src="app.js"></script>
+
+<header>OSCAR</header>
+
+<div id="map"></div>
+
+<footer>
+  <a href="#" class="icon active">
+    <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="currentColor"><path d="M240-200h120v-240h240v240h120v-360L480-740 240-560v360Zm-80 80v-480l320-240 320 240v480H520v-240h-80v240H160Zm320-350Z"/></svg>
+    <span>Home</span>
+  </a>
+  <a href="#" class="icon">
+    <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="currentColor"><path d="M480-280q17 0 28.5-11.5T520-320q0-17-11.5-28.5T480-360q-17 0-28.5 11.5T440-320q0 17 11.5 28.5T480-280Zm0-160q17 0 28.5-11.5T520-480q0-17-11.5-28.5T480-520q-17 0-28.5 11.5T440-480q0 17 11.5 28.5T480-440Zm0-160q17 0 28.5-11.5T520-640q0-17-11.5-28.5T480-680q-17 0-28.5 11.5T440-640q0 17 11.5 28.5T480-600Zm320 440H160q-33 0-56.5-23.5T80-240v-160q33 0 56.5-23.5T160-480q0-33-23.5-56.5T80-560v-160q0-33 23.5-56.5T160-800h640q33 0 56.5 23.5T880-720v160q-33 0-56.5 23.5T800-480q0 33 23.5 56.5T880-400v160q0 33-23.5 56.5T800-160Zm0-80v-102q-37-22-58.5-58.5T720-480q0-43 21.5-79.5T800-618v-102H160v102q37 22 58.5 58.5T240-480q0 43-21.5 79.5T160-342v102h640ZM480-480Z"/></svg>
+    <span>Voucher</span>
+  </a>
+  <a href="#" class="icon">
+    <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="currentColor"><path d="M798-120q-125 0-247-54.5T329-329Q229-429 174.5-551T120-798q0-18 12-30t30-12h162q14 0 25 9.5t13 22.5l26 140q2 16-1 27t-11 19l-97 98q20 37 47.5 71.5T387-386q31 31 65 57.5t72 48.5l94-94q9-9 23.5-13.5T670-390l138 28q14 4 23 14.5t9 23.5v162q0 18-12 30t-30 12ZM241-600l66-66-17-94h-89q5 41 14 81t26 79Zm358 358q39 17 79.5 27t81.5 13v-88l-94-19-67 67ZM241-600Zm358 358Z"/></svg>
+    <span>Contact</span>
+  </a>
+</footer>
+
+<script src="leaflet/leaflet.js"></script>
+<script src="app.js"></script>
 </body>
 </html>
