--- a/index.html
+++ b/index.html
@@ -5,65 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
   <title>OSCAR PWA</title>
   <link rel="stylesheet" href="leaflet/leaflet.css" />
-  <style>
-    html, body {
-      margin: 0;
-      padding: 0;
-      height: 100%;
-      font-family: sans-serif;
-      overflow: hidden;
-    }
-
-    body {
-      display: flex;
-      flex-direction: column;
-    }
-
-    header {
-      height: 48px;
-      background-color: #1976d2;
-      color: white;
-      text-align: center;
-      line-height: 48px;
-      font-weight: bold;
-      flex-shrink: 0;
-    }
-
-    #map {
-      flex: 1;
-      width: 100%;
-    }
-
-    footer {
-      height: 60px;
-      background-color: #f2f2f2;
-      display: flex;
-      justify-content: space-around;
-      align-items: center;
-      border-top: 1px solid #ccc;
-      flex-shrink: 0;
-    }
-
-    .icon {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      font-size: 0.75em;
-      color: #444;
-      text-decoration: none;
-    }
-
-    .icon.active {
-      color: #1976d2;
-      font-weight: bold;
-    }
-
-    .icon svg {
-      width: 24px;
-      height: 24px;
-      margin-bottom: 4px;
-    }
-  </style>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 
